# bloom-boba

./: .gitignore  Makefile.am  NEWS  README.md  bloom-boba.pc.in  build.sh  configure.ac
build-aux/: git-version.sh
include/: Makefile.am
include/bloom-boba/: ansi_sequences.h  cmd.h  component.h  dynamic_buffer.h  msg.h  runtime.h  tui.h  unicode.h
include/bloom-boba/components/: statusbar.h  textinput.h  textview.h  viewport.h
src/: Makefile.am  ansi_sequences.c  cmd.c  dynamic_buffer.c  input_parser.c  msg.c  runtime.c  unicode.c
src/components/: statusbar.c  textinput.c  textview.c  viewport.c
tests/: Makefile.am  test_input_parser.c  test_runtime.c  test_statusbar.c  test_textinput.c  test_viewport.c
