# include/Makefile.am - Install bloom-boba public headers

bloom_bobadir = $(includedir)/bloom-boba
bloom_boba_HEADERS = \
    bloom-boba/tui.h \
    bloom-boba/msg.h \
    bloom-boba/cmd.h \
    bloom-boba/component.h \
    bloom-boba/input_parser.h \
    bloom-boba/runtime.h \
    bloom-boba/dynamic_buffer.h \
    bloom-boba/ansi_sequences.h

bloom_boba_componentsdir = $(includedir)/bloom-boba/components
bloom_boba_components_HEADERS = \
    bloom-boba/components/textinput.h \
    bloom-boba/components/textview.h \
    bloom-boba/components/viewport.h
